[Refactor] minor code improvement